[gd_scene load_steps=8 format=2]

[ext_resource path="res://Fonts/simply-sans.book.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://GFX/temp_dialogue_background.png" type="Texture" id=2]
[ext_resource path="res://OtherScenes/Dialog_Box.gd" type="Script" id=3]
[ext_resource path="res://GFX/dialogue_icon.png" type="Texture" id=4]

[sub_resource type="DynamicFont" id=1]
size = 28
font_data = ExtResource( 1 )

[sub_resource type="Animation" id=2]
resource_name = "Idle"
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 933, 145 ), Vector2( 933, 150 ) ]
}

[sub_resource type="Animation" id=3]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 933, 145 ) ]
}

[node name="Dialogue_Box" type="Control"]
margin_left = 29.0
margin_top = 401.0
margin_right = 992.0
margin_bottom = 569.0
script = ExtResource( 3 )
__meta__ = {
"_edit_group_": true
}

[node name="TextureRect" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 2 )
expand = true
stretch_mode = 1

[node name="Dialogue_Text" type="RichTextLabel" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 10.0
margin_top = 10.0
margin_right = -10.0
margin_bottom = -10.0
custom_colors/default_color = Color( 0, 0, 0, 1 )
custom_fonts/normal_font = SubResource( 1 )
bbcode_enabled = true
bbcode_text = "\"Lennie!\" he said sharply. \"Lennie, for God’ sakes don’t drink so much.\" Lennie continued to snort into the pool. The small man leaned over and shook him by the shoulder. \"Lennie. You gonna be sick like you was last night.\" "
text = "\"Lennie!\" he said sharply. \"Lennie, for God’ sakes don’t drink so much.\" Lennie continued to snort into the pool. The small man leaned over and shook him by the shoulder. \"Lennie. You gonna be sick like you was last night.\" "

[node name="Speaker" type="RichTextLabel" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 10.0
margin_top = 10.0
margin_right = -10.0
margin_bottom = -10.0
custom_colors/default_color = Color( 0, 0, 0, 1 )
custom_fonts/normal_font = SubResource( 1 )
bbcode_enabled = true

[node name="Tween" type="Tween" parent="."]

[node name="DialogueIcon" type="Sprite" parent="."]
visible = false
position = Vector2( 933, 145 )
scale = Vector2( 0.4, 0.4 )
texture = ExtResource( 4 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="DialogueIcon"]
autoplay = "Idle"
anims/Idle = SubResource( 2 )
anims/RESET = SubResource( 3 )

[connection signal="tween_completed" from="Tween" to="." method="_on_Tween_tween_completed"]
